# webhook-router

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
apps/webhook_router/: Cargo.toml  project.json
apps/webhook_router/migrations/: 0001_init.sql
apps/webhook_router/src/: console_handlers.rs  db.rs  handlers.rs  main.rs  models.rs
apps/webhook_router/src/adapters/: dingtalk.rs  http.rs  lark.rs  mod.rs  slack.rs  wecom.rs
apps/webhook_router/src/adapters/snapshots/: webhook_router__adapters__dingtalk__tests__adapters_dingtalk_ingress_action_card.snap  webhook_router__adapters__dingtalk__tests__adapters_dingtalk_ingress_feed_card.snap  webhook_router__adapters__dingtalk__tests__adapters_dingtalk_ingress_link.snap  webhook_router__adapters__dingtalk__tests__adapters_dingtalk_ingress_markdown.snap  webhook_router__adapters__dingtalk__tests__adapters_dingtalk_ingress_text.snap  webhook_router__adapters__dingtalk__tests__adapters_dingtalk_uem_to_egress.snap  webhook_router__adapters__dingtalk__tests__adapters_dingtalk_uem_to_egress_with_title.snap  webhook_router__adapters__http__tests__adapters_http_ingress.snap  webhook_router__adapters__http__tests__adapters_http_uem_to_egress.snap  webhook_router__adapters__lark__tests__adapters_lark_ingress_text.snap  webhook_router__adapters__lark__tests__adapters_lark_uem_to_egress.snap  (+9 more)
apps/webhook_router/src/utils/: format.rs  markdown.rs  mod.rs
docs/: tech-plan.md
examples/: docker-compose.example.yml
(+36 files in other folders)
